--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,4 +4,4 @@
   <%= render partial: 'users/table', locals: {users: @users} %>
 <% end %>
 
-<button><%= link_to 'Refresh', users_path, remote: true %></button>
+<button class = "btn btn-outline-primary"><%= link_to 'Refresh', users_path, remote: true %></button>
