Add another controller to fetch users since there was a bug in the counter.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,4 +4,4 @@
   <%= render partial: 'users/table', locals: {users: @users} %>
 <% end %>
 
-<button class = "btn btn-outline-primary"><%= link_to 'Refresh', users_path, remote: true %></button>
+<%= link_to 'Refresh', fetch_users_path, remote: true %>
